--- a/main.css
+++ b/main.css
@@ -1,10 +1,25 @@
-:root{
+:root {
     --gradient-default-background: linear-gradient(77deg, rgba(58,86,100,1) 1%, rgba(13,39,74,1) 100%);
     --default-font-font-family: sans-serif;
     --color-1-background: #46738b;
     --color-2-background: #0d274a;
+    --day-bg-color: #f9f9f9;
+    --day-text-color: #333;
 }
 
+.day-mode {
+    --gradient-default-background: linear-gradient(77deg, rgba(240,240,240,1) 1%, rgba(200,200,200,1) 100%);
+    --color-1-background: #ffffff;
+    --color-2-background: #cccccc;
+    --day-bg-color: #fff;
+    --day-text-color: #000;
+}
+
+body {
+    background-color: var(--gradient-default-background);
+    color: var(--day-text-color);
+    font-family: var(--default-font-font-family);
+}
 *{
     margin: 0;
     padding: 0;
@@ -22,6 +37,7 @@
     color: white;
     font-family: var(--default-font-font-family);
 }
+
 .auto-type{
     color: var(--color-2-background);
     font-weight: 900;
@@ -45,6 +61,7 @@
     z-index: 1000;
     top: 0;
 }
+
 
 .navbar-child1 h5{
     font-size: 2rem;
@@ -79,7 +96,7 @@
 }
 
 .navbar-child2 ul li:hover{
-    box-shadow: 2px 2px 6px, 2px 2px 6px rgba(128, 128, 128, 0.336);
+    box-shadow: 2px 2px 6px, 2px 2px 6px rgba(37, 37, 37, 0.336);
 }
 
 
@@ -162,11 +179,19 @@
     font-size: 15px;
     font-weight: 500
 }
+.hire-me:hover{
+    background-color: #a4854b;
+    cursor: pointer;
+    border: 1px solid white;
+    transition: all .9s ease;
+}
 .bg-about{
     height: 100%;
     width: 100%;
     background-color: white;
 }
+
+
 
 
 /* Add this to your existing CSS */
@@ -186,18 +211,20 @@
          padding: 0;
     }
     .home-child1{
-        background-image: url(/PICTURES/jaz.jpg);
+        background-image: url(jaz.jpg);
         background-position: center;
         background-size: cover;
-        filter: blur(3px);
+        filter: blur(6px);
         height: 100%;
         width: 100%;
+        overflow: hidden;
     }
     .home-child2{
-        height: 100%;
+        height: fit-content;
         width: 80%;
-        padding: 0 10px;
+        padding: 20px 20px;
         position: absolute;
+        gap: 2.5rem;
     }
     .home-child1 img{
         display: none;
@@ -206,11 +233,15 @@
         color: white;
         text-shadow: 2px 2px 6px rgb(85, 85, 85);
     }
+    .home-child2 h1 {
+        font-size: 45px;
+    }
     .home-child2 p{
-        font-size: 26px;
+        font-size: 23px;
     }
   }
   @media screen and (max-width: 400px){
+
     .bg-home{
         padding: 0;
    }
@@ -243,36 +274,83 @@
         border-radius: 15px;
         border: none;
     }
-  }
-
-  @media screen and (max-width: 670px){
-    .bg-home{
-        padding: 0;
-   }
-    .navbar{
-        padding: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+    .home-child2 h1 {
+        font-size: 35px;
+    }
+    .home-child2 p{
+        font-size: 18px;
+    }
+    .home-child2{
         gap: 1rem;
     }
   }
+
+  @media screen and (max-width: 670px){
+        .bg-home{
+            margin-top: 50px;
+            height: 70%;
+            flex-direction: column;
+    }
+
+
+        .home-child2{
+            gap: 1rem;
+        }
+        .navbar{
+            height: fit-content;
+            padding: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 0.7rem;
+            padding: 0;
+        }
+        .navbar-child1 h5{
+            margin-top: 10px;
+        }
+        .navbar-child1{
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+        .home-child1{
+            background-image: flex;
+            background-position: center;
+            background-size: cover;
+            filter: blur(7px);
+            height: 100%;
+            width: 100%;
+        }
+        .home-child2 h1 {
+            margin-top: 20px;
+            font-size: 27px;
+            height: 75px;
+        }
+        .home-child2 p{
+            font-size: 16px;
+        }
+    }
+
   @media screen and (max-width: 565px){
     .bg-home{
+        margin-top: 50px;
         padding: 0;
+        height: 60%;
+        flex-direction: column;
    }
-    .navbar-child1{
-        display: none;
-    }
     .navbar-child2{
         margin: 15px 5px;
         width: 100%;
+        gap: 1.5rem;
     }
     .navbar-child2 ul{
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    .home-child2 {
+        gap: 2rem;
     }
     .navbar-child2 ul li{
         margin: 0 10px;
@@ -285,5 +363,12 @@
         background: rgba(255, 255, 255, 0.598);
         border-radius: 15px;
         border: none;
+    }
+    .home-child2 h1 {
+        font-size: 30px;
+        height: 75px;
+    }
+    .home-child2 p{
+        font-size: 17px;
     }
   }
